[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/Items/Bullets/Shotgun Shell-export.png" type="Texture" id=1]
[ext_resource path="res://Scripts/items/Bullets/ShotgunShell.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Items/PickUpItemSFX.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "ShotgunShell"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2.94 ), Vector2( 0, 0 ) ]
}

[node name="ShotgunShell" type="Area2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, 2.87656 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShotgunShell = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_ShotgunShell_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
